[package]
name = "kproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "4.5.9"
cliparser = "0.1.2"
libc = "0.2.155"
# paw = "1.0.0"
# taap = "0.1.4"
# taap = { git = "https://github.com/kamranrad1993/taap-rs.git" }