[package]
name = "kproxy"
version = "0.1.0"
edition = "2021"


[dependencies]
cliparser = "0.1.2"
lazy_static = "1.5.0"
libc = "0.2.155"
polling = "3.7.2"
mio = {version = "1.0.0", features = ['net','log','os-poll','os-ext']}
tokio = {version = "1.39.3" , features = ['full', 'socket2', 'net']}
hyper = {version = "1.4.1" , features = ['full' ,'server', 'client', 'http2', 'http1']}
num = "0.4.3"
id-pool = "0.2.2"
h2 = "0.4.6"
# async-std = "1.12.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio-macros = "2.4.0"
